Refactor: #59 링크 전체 조회 시 폴더에 N개에 저장 되어 있는 링크 폴더명 수정